<resources xmlns:tools="http://schemas.android.com/tools">
<string name="large_text">
"Material is the metaphor.\n\n"

"A material metaphor is the unifying theory of a rationalized space and a system of motion."
"The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
"technologically advanced and open to imagination and magic.\n"
"Surfaces and edges of the material provide visual cues that are grounded in reality. The "
"use of familiar tactile attributes helps users quickly understand affordances. Yet the "
"flexibility of the material creates new affordances that supercede those in the physical "
"world, without breaking the rules of physics.\n"
"The fundamentals of light, surface, and movement are key to conveying how objects move, "
"interact, and exist in space and in relation to each other. Realistic lighting shows "
"seams, divides space, and indicates moving parts.\n\n"

"Bold, graphic, intentional.\n\n"

"The foundational elements of print based design typography, grids, space, scale, color, "
"and use of imagery guide visual treatments. These elements do far more than please the "
"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
"imagery, large scale typography, and intentional white space create a bold and graphic "
"interface that immerse the user in the experience.\n"
"An emphasis on user actions makes core functionality immediately apparent and provides "
"waypoints for the user.\n\n"

"Motion provides meaning.\n\n"

"Motion respects and reinforces the user as the prime mover. Primary user actions are "
"inflection points that initiate motion, transforming the whole design.\n"
"All action takes place in a single environment. Objects are presented to the user without "
"breaking the continuity of experience even as they transform and reorganize.\n"
"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

"3D world.\n\n"

"The material environment is a 3D space, which means all objects have x, y, and z "
"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
"positive z-axis extending towards the viewer. Every sheet of material occupies a single "
"position along the z-axis and has a standard 1dp thickness.\n"
"On the web, the z-axis is used for layering and not for perspective. The 3D world is "
"emulated by manipulating the y-axis.\n\n"

"Light and shadow.\n\n"

"Within the material environment, virtual lights illuminate the scene. Key lights create "
"directional shadows, while ambient light creates soft shadows from all angles.\n"
"Shadows in the material environment are cast by these two light sources. In Android "
"development, shadows occur when light sources are blocked by sheets of material at "
"various positions along the z-axis. On the web, shadows are depicted by manipulating the "
"y-axis only. The following example shows the card with a height of 6dp.\n\n"

"Resting elevation.\n\n"

"All material objects, regardless of size, have a resting elevation, or default elevation "
"that does not change. If an object changes elevation, it should return to its resting "
"elevation as soon as possible.\n\n"

"Component elevations.\n\n"

"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
"does not vary from 6dp in one app to 16dp in another app).\n"
"Components may have different resting elevations across platforms, depending on the depth "
"of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

"Responsive elevation and dynamic elevation offsets.\n\n"

"Some component types have responsive elevation, meaning they change elevation in response "
"to user input (e.g., normal, focused, and pressed) or system events. These elevation "
"changes are consistently implemented using dynamic elevation offsets.\n"
"Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
"to the component’s resting state. They ensure that elevation changes are consistent "
"across actions and component types. For example, all components that lift on press have "
"the same elevation change relative to their resting elevation.\n"
"Once the input event is completed or cancelled, the component will return to its resting "
"elevation.\n\n"

"Avoiding elevation interference.\n\n"

"Components with responsive elevations may encounter other components as they move between "
"their resting elevations and dynamic elevation offsets. Because material cannot pass "
"through other material, components avoid interfering with one another any number of ways, "
"whether on a per component basis or using the entire app layout.\n"
"On a component level, components can move or be removed before they cause interference. "
"For example, a floating action button (FAB) can disappear or move off screen before a "
"user picks up a card, or it can move if a snackbar appears.\n"
"On the layout level, design your app layout to minimize opportunities for interference. "
"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
"when a user tries to pick up one of cards.\n\n"
</string>
    <string name="action_settings">Settings</string>
    <string name="start">START</string>
    <string name="teste_auto_pentru_pregatire">TESTE AUTO PENTRU PREGATIRE</string>
    <string name="varianta2">VARIANTA2</string>
    <string name="varianta3">VARIANTA3</string>
    <string name="varianta4">VARIANTA4</string>
    <string name="varianta1">VARIANTA1</string>
    <string name="con_inut">Conținut</string>
    <string name="_10_ntreb_ri_tip_gril">10 întrebări tip grilă</string>
    <string name="r_spunsuri_i_explica_ii">Răspunsuri și explicații</string>
    <string name="start_test">START TEST</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="indicatorul_are_semnificatia">Indicatorul are semnificatia:</string>
    <string name="a_drum_cu_prioritate">A) Drum cu prioritate</string>
    <string name="b_drum_modernizat">B) Drum modernizat</string>
    <string name="c_autostrada">C) Autostrada</string>
    <string name="raspuns">Raspuns</string>
    <string name="next">Next</string>
    <string name="indicatorul_interzice">Indicatorul interzice:</string>
    <string name="a_circulatia_din_sens_opus">A) Circulatia din sens opus</string>
    <string name="b_deplasarea_pe_directia_inainte">B) deplasarea pe directia inainte</string>
    <string name="c_schimbarea_directiei_de_mers_la_stanga_sau_la_dreapta">C) Schimbarea directiei de mers la stanga sau la dreapta</string>
    <string name="a1">A</string>
    <string name="b1">B</string>
    <string name="c1">C</string>
    <string name="next2">Next</string>
    <string name="raspuns12">Raspuns</string>
    <string name="indicatoul_interzice">Indicatoul interzice:</string>
    <string name="a2">A</string>
    <string name="b2">B</string>
    <string name="c2">C</string>
    <string name="care_autovehivule_au_prioritate_de_trecere_la_intalnirea_indicatorului">Care autovehivule au prioritate de trecere la intalnirea indicatorului:</string>
    <string name="a_autovehiculele_care_circula_din_sens_opus">A) Autovehiculele care circula din sens opus</string>
    <string name="b_autovehiculele_care_intalnesc_acest_indicator">B) Autovehiculele care intalnesc acest indicator</string>
    <string name="c_autovehiculele_care_circula_din_sens_opus_cu_exceptia_celor_destinate_transportului_de_marfuri_si_autobuzelor">C) Autovehiculele care circula din sens opus, cu exceptia celor destinate transportului de marfuri si autobuzelor</string>
    <string name="todo1">TODO1</string>
    <string name="raspuns13">Raspuns</string>
    <string name="next3">Next</string>
    <string name="la_aproprierea_de_intersectia_unde_este_instalat_se_impune">La aproprierea de intersectia unde este instalat, se impune:</string>
    <string name="a_reducerea_vitezei_asigurarea_si_acordarea_prioritatii_daca_pe_drumul_intersectat_circula_alte_vehicule">A) Reducerea vitezei, asigurarea si acordarea prioritatii, daca pe drumul intersectat circula alte vehicule</string>
    <string name="b_reducerea_vitezei_si_continuarea_deplasarii_deoarece_indicatorul_nu_obliga_la_oprire">B) Reducerea vitezei si continuarea deplasarii, deoarece indicatorul nu obliga la oprire</string>
    <string name="c_reducerea_vitezei_si_oprirea_in_dreptul_indicatorului">C) Reducerea vitezei si oprirea in dreptul indicatorului</string>
    <string name="todooo">TODOOO</string>
    <string name="raspuns14">Raspuns</string>
    <string name="next4">Next</string>
    <string name="a4">A</string>
    <string name="b4">B</string>
    <string name="c4">C</string>
    <string name="next5">Next</string>
    <string name="raspuns5">Raspuns</string>
    <string name="todo000">TODO000</string>
    <string name="la_intalnirea_caruia_dintre_cele_doua_indicatoare_este_permisa_schimbarea_directiei_de_mers">La intalnirea caruia dintre cele doua indicatoare este permisa schimbarea directiei de mers?</string>
    <string name="a_la_indicatorul_1">A) La indicatorul 1</string>
    <string name="b_la_indicatorul_2">B) La indicatorul 2</string>
    <string name="c_la_niciunul">C) La niciunul</string>
    <string name="a5">A</string>
    <string name="b5">B</string>
    <string name="c5">C</string>
    <string name="next6">Next</string>
    <string name="raspuns6">Raspuns</string>
    <string name="todo66">TODO66</string>
    <string name="a6">A</string>
    <string name="b6">B</string>
    <string name="c6">C</string>
    <string name="c_sa_reduca_viteza_intrucat_urmeaza_o_zona_frecventata_de_copii">C) Sa reduca viteza intrucat urmeaza o zona frecventata de copii</string>
    <string name="b_sa_opreasca_in_dreptul_locului_unde_este_instalat_indiferent_daca_pe_trecere_se_afla_sau_nu_pietoni">B) Sa opreasca in dreptul locului unde este instalat, indiferent daca pe trecere se afla sau nu pietoni</string>
    <string name="a_sa_reduca_viteza_si_sa_acorde_prioritate_daca_sunt_pietoni_angajati_in_traversare">A) Sa reduca viteza si sa acorde prioritate, daca sunt pietoni angajati in traversare</string>
    <string name="cum_trebuie_sa_circule_conducatorii_de_automobile_la_intalnirea_indicatorului">Cum trebuie sa circule conducatorii de automobile la intalnirea indicatorului</string>
    <string name="next7">Next</string>
    <string name="raspuns7">Raspuns</string>
    <string name="a7">A</string>
    <string name="indicatorul_informeaza_ca">Indicatorul informeaza ca:</string>
    <string name="a_circulatia_se_desfasoara_intr_un_singur_sens">A) Circulatia se desfasoara intr-un singur sens</string>
    <string name="b_circulatia_se_desfasoara_in_sens_unic_din_directia_opusa">B) Circulatia se desfasoara in sens unic din directia opusa</string>
    <string name="c_directia_de_mers_obligatorie_este_inainte">C) Directia de mers obligatorie este inainte</string>
    <string name="c7">C</string>
    <string name="todo7">TODO7</string>
    <string name="b7">B</string>
    <string name="next8">Next</string>
    <string name="raspuns8">Raspuns</string>
    <string name="todo8">TODO8</string>
    <string name="c_pe_traseul_2">C) Pe traseul 2</string>
    <string name="b_pe_traseul_1_sau_4">B) Pe traseul 1 sau 4</string>
    <string name="a_pe_traseul_3">A) Pe traseul 3</string>
    <string name="next9">Next</string>
    <string name="todo9">TODO9</string>
    <string name="raspuns9">Raspuns</string>
    <string name="a9">A</string>
    <string name="b9">B</string>
    <string name="c9">C</string>
    <string name="in_ce_ordine_trec_cele_4_autoturisme">In ce ordine trec cele 4 autoturisme:</string>
    <string name="c_3_4_1_2">C) 3, 4, 1, 2</string>
    <string name="b_3_2_4_1">B) 3, 2, 4, 1</string>
    <string name="a_4_3_2_1">A) 4, 3, 2, 1</string>
</resources>